src/components/Header/Header.module.css
.header {
  position: relative;
  width: 100%;
  background-color: var(--primary-dark);
  display: grid;
  grid-template-columns: 1fr;
}

.headerTitle {
  font-weight: 500;
  padding: 0.5rem;
  letter-spacing: 0.15rem;
  display: inline-block;
  border-right: 0.1em solid #fff;
}

.imgDiv {
  display: grid;
  place-items: center;
}

.imgDiv {
  display: grid;
  place-items: center;
  overflow: hidden;
  width: 100%;
  max-width: 933px;
}

.profileImg {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.typing {
  animation: blink 0.5s step-end infinite alternate;
}

@keyframes blink {
  50% {
    border-color: transparent;
  }
}

.headerNav {
  display: none;
  background-color: var(--secondary-grey);
}

.introText {
  position: absolute;
  bottom: 1rem;
  left: 1rem;
}

.headerName {
  font-size: 1.7rem;
  line-height: 1;
}

.headerWork {
  font-size: 1rem;
  background-color: var(--accent-color);
  display: inline-block;
  color: var(--primary-dark);
  padding: 0.5rem 1rem;
  margin-top: 1rem;
}

@media (min-width: 768px) {
  .header {
    grid-template-columns: 1fr 2fr;
  }

  .stickyNav {
    position: fixed;
    top: 0;
    left: 50%;
    transform: translateX(-50%);
    width: 100%;
    max-width: 1400px;
    display: grid;
    grid-template-columns: 1fr 2fr;
    z-index: 1000;
  }

  .h1Container {
    column-span: 1/1;
    background-color: var(--primary-dark);
    padding: 0.2em;
  }

  .headerTitle {
    border-right: 0.1em solid #fff;
    font-size: 2.2rem;
    line-height: 1;
  }

  .headerNav {
    background-color: var(--secondary-grey);
    display: block;
  }

  .navUl {
    display: flex;
    flex-direction: row;
    gap: 3rem;
    align-items: center;
    justify-content: center;
    font-size: 1.2rem;
    font-weight: 500;
    height: 100%;
  }

  .navUl .active {
    text-decoration: underline;
    text-underline-offset: 5px;
    text-decoration-color: var(--accent-color);
    text-decoration-thickness: 3px;
    outline: none;
  }

  .introText {
    bottom: 4em;
    left: 4em;
  }

  .headerName {
    font-size: 2rem;
  }

  .headerWork {
    font-size: 1.3rem;
    margin-top: 0.8rem;
  }
}

@media (min-width: 1024px) {
  .h1Container {
    text-align: center;
  }

  .introText {
    left: 8em;
  }

  .headerName {
    font-size: 3rem;
  }

  .headerWork {
    font-size: 1.5rem;
  }
}

@media (min-width: 1400px) {
  .navUl {
    gap: 4rem;
    font-size: 1.4rem;
  }
}

